# vis-cosets

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cosets/: CMakeLists.txt
cosets/include/: coxeter.hpp  files.hpp  mesh.hpp  mirrors.hpp  numeric.hpp  shader.hpp  util.h  window.hpp
cosets/src/: combos.cpp  coxeter.cpp  main.cpp  mesh.cpp  mirror.cpp  mirrors.cpp  tc.cpp
cosets/src/shaders/: main.fs.glsl  main.vs.glsl
cosets/src/util/: coxeter.cpp  coxeter.hpp  files.cpp  files.hpp  mesh.cpp  mesh.hpp  mirrors.cpp  mirrors.hpp  numeric.cpp  numeric.hpp  shader.cpp  shader.hpp  window.cpp  window.hpp
